--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <h1>Наш супер сайт</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni maiores temporibus nemo soluta quia magnam esse quasi voluptatum, incidunt error, velit accusantium saepe perspiciatis nulla. Nam minima porro unde qui.</p>
   <p>Проверка2</p>
+  <h3>Еще одна проверка</h3>
   <script src="js/main.js"></script>
 </body>
 </html>
